# maszyna-eu07

./: CMakeLists.txt  README.md
McZapkie/: MOVER.h  Mover.cpp  hamulce.cpp  hamulce.h
application/: application.cpp  drivermode.cpp  drivermode.h  driveruipanels.cpp  editormode.cpp  scenarioloaderuilayer.cpp  scenarioloaderuilayer.h
audio/: audiorenderer.cpp  sound.cpp
betterRenderer/renderer/source/: track_batching.cpp
environment/: moon.cpp  skydome.cpp
gl/: cubemap.cpp
input/: command.cpp  command.h  drivermouseinput.cpp
model/: AnimModel.cpp  AnimModel.h  Model3d.cpp  Model3d.h
rendering/: frustum.h  lightarray.cpp  opengl33renderer.cpp  opengl33renderer.h  openglrenderer.cpp  openglrenderer.h  particles.cpp  precipitation.cpp
scene/: scene.cpp  scene.h
scripting/: lua.cpp  lua.h
shaders/: envmapping.glsl  light_common.glsl  mat_default_specgloss.frag  mat_detail_normalmap_specgloss.frag  mat_detail_parallax_specgloss.frag  mat_normalmap_specgloss.frag  mat_parallax_specgloss.frag  mat_reflmap_specgloss.frag  mat_shadowlessnormalmap_specgloss.frag  mat_sunlessnormalmap.frag  mat_sunlessnormalmap_specgloss.frag  postfx_ssao.frag  postfx_ssao_apply.frag  postfx_ssao_blur.frag  tonemapping.glsl
simulation/: simulationstateserializer.cpp
utilities/: Globals.h  dumb3d.cpp  dumb3d.h  glmHelpers.h  utilities.h
vehicle/: Camera.cpp  Camera.h  Driver.cpp  Driver.h  DynObj.cpp  DynObj.h  Train.cpp  Train.h
vr/: openvr_imp.cpp
world/: Event.cpp  Event.h  Segment.cpp  Segment.h  Spring.cpp  Spring.h  Track.cpp  Track.h  TrkFoll.h
